# Scraper

./: .gitignore  CMakeLists.txt  README.md  main.c
resources/: Scraper_installer.nsi  configuration.sconf  listExtFileMimeType.txt  list_file_ext_mime_type.txt
sources/: action.h  app.c  app.h  common.c  common.h  config.c  config.h  main.c  option.h  raw_resource.c  raw_resource.h  relative_resource.c  relative_resource.h  request.c  request.h  resource.c  resource.h  session.c  session.h  struct.h  task.h  urlHelper.c  urlHelper.h  version.h
sources/functions/: action.c  app.c  common.c  config.c  extFileTypeMime.c  fileExtTypeMime.c  fileNameManager.c  listArray.c  option.c  request.c  resource.c  session.c  task.c  urlHelper.c  urlSearcher.c  version.c
sources/functions/lists/: ListChar.c  listArray.c
sources/functions/services/: fileExtTypeMime.c  fileNameManager.c  fileReader.c  fileWriter.c
sources/headers/: action.h  app.h  common.h  config.h  extFileTypeMime.h  fileExtTypeMime.h  fileNameManager.h  listArray.h  option.h  request.h  resource.h  session.h  struct.h  task.h  urlHelper.h  urlSearcher.h
sources/headers/lists/: ListChar.h  listArray.h
sources/headers/services/: fileExtTypeMime.h  fileNameManager.h  fileReader.h  fileWriter.h
test/: main.c  test.h  testApp.c  testCommon.c  testConfig.c  testDummiesAction.c  testDummiesAction.h  testExtFileTypeMime.c  testFileExtTypeMime.c  testFileNameManager.c  testFileReader.c  testFileWriter.c  testListArray.c  testListChar.c  testPageUrlDummies.c  testPageUrlDummies.h  testRequest.c  testRequest.h  testResource.c  testSession.c  testShare.c  testShare.h  testUrlHelper.c  testUrlSearcher.c
test/testPage/: testGooglePage.html  testPage2.html  testPage4Link.html  testPageNoUrl.html  testPageSameUrls.html  testPageTricky.html
